--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,11 @@
   <artifactId>javaee</artifactId>
   <version>1-SNAPSHOT</version>
   <packaging>war</packaging>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
   <repositories>
     <repository>
       <id>apache-m2-snapshot</id>
@@ -20,6 +22,7 @@
       <url>http://tomcat.apache.org/dev/dist/m2-repository/</url>
     </repository>
   </repositories>
+
   <pluginRepositories>
     <pluginRepository>
       <id>apache-m2-snapshot</id>
@@ -27,11 +30,18 @@
       <url>http://repository.apache.org/snapshots</url>
     </pluginRepository>
   </pluginRepositories>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.openejb</groupId>
+      <artifactId>arquillian-tomee-embedded</artifactId>
+      <version>1.6.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -76,38 +86,16 @@
       <version>1.1.1.Final</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.apache.openejb</groupId>
-      <artifactId>arquillian-tomee-embedded</artifactId>
-      <version>1.6.0-SNAPSHOT</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
+
   <build>
     <defaultGoal>install</defaultGoal>
     <plugins>
       <plugin>
-        <groupId>org.apache.openejb.maven</groupId>
-        <artifactId>tomee-maven-plugin</artifactId>
-        <version>1.6.0.beta1</version>
-        <configuration>
-          <password>tomee</password>
-          <path>/</path>
-          <removeDefaultWebapps>true</removeDefaultWebapps>
-          <removeTomeeWebapp>true</removeTomeeWebapp>
-          <tomeeClassifier>plus</tomeeClassifier>
-          <tomeeVersion>1.6.0-SNAPSHOT</tomeeVersion>
-          <user>tomee</user>
-        </configuration>
-      </plugin>
-      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <debug>true</debug>
           <forceJavacCompilerUse>true</forceJavacCompilerUse>
-          <showDeprecation>true</showDeprecation>
-          <showWarnings>true</showWarnings>
           <source>1.7</source>
           <target>1.7</target>
         </configuration>
@@ -151,7 +139,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.4</version>
         <configuration>
-          <failOnMissingWebXml>true</failOnMissingWebXml>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
     </plugins>
