--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.jboss.arquillian.extension</groupId>
+      <artifactId>arquillian-persistence-impl</artifactId>
+      <version>1.0.0.Alpha5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.jboss.arquillian.graphene</groupId>
       <artifactId>arquillian-graphene</artifactId>
       <version>2.0.0.Alpha4</version>
