--- a/pom.xml
+++ b/pom.xml
@@ -54,21 +54,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
-      <artifactId>arquillian-drone-impl</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
-      <artifactId>arquillian-persistence-impl</artifactId>
-      <version>1.0.0.Alpha5</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.arquillian.graphene</groupId>
-      <artifactId>arquillian-graphene</artifactId>
-      <version>2.0.0.Alpha4</version>
-      <type>pom</type>
+      <groupId>org.apache.wink</groupId>
+      <artifactId>wink-client</artifactId>
+      <version>1.3.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
