--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <openejb.version>4.6.0.beta1</openejb.version>
-    <openjpa.version>2.2.2</openjpa.version>
-    <tomee.version>1.6.0.beta1</tomee.version>
+    <openejb.version>4.6.0-SNAPSHOT</openejb.version>
+    <openjpa.version>2.3.0-SNAPSHOT</openjpa.version>
+    <tomee.version>1.6.0-SNAPSHOT</tomee.version>
   </properties>
 
   <dependencies>
