--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,86 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <openejb.version>4.6.0-SNAPSHOT</openejb.version>
+    <openejb.version>4.7.0-SNAPSHOT</openejb.version>
     <openjpa.version>2.2.2</openjpa.version>
-    <tomee.version>1.6.0-SNAPSHOT</tomee.version>
+    <tomee.version>1.7.0-SNAPSHOT</tomee.version>
     <jacoco.version>0.6.2.201302030002</jacoco.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>apache-snapshots</id>
+      <name>Apache Snapshots Repository</name>
+      <url>http://repository.apache.org/content/groups/snapshots-group</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>sonatype-snapshots</id>
+      <name>Sonatype OSS Snapshots Repository</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>JBoss Repository</id>
+      <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
+      <layout>default</layout>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>apache-m2-snapshot</id>
+      <name>Apache M2 Snapshot Repository</name>
+      <url>http://repository.apache.org/snapshots/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>terracotta</id>
+      <name>Terracotta</name>
+      <url>http://repo.terracotta.org/maven2/</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>apache-m2-snapshot</id>
+      <name>Apache Software Foundation M2 Snapshot Repository</name>
+      <url>http://repository.apache.org/snapshots/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>Codehaus Snapshots</id>
+      <url>http://snapshots.repository.codehaus.org/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
 
   <dependencyManagement>
     <dependencies>
@@ -145,6 +220,7 @@
         <artifactId>tomee-maven-plugin</artifactId>
         <version>${tomee.version}</version>
         <configuration>
+          <classifier>exec-war</classifier>
           <password>tomee</password>
           <tomeeClassifier>plus</tomeeClassifier>
           <tomeeVersion>${tomee.version}</tomeeVersion>
@@ -203,12 +279,6 @@
         <dependency>
           <groupId>org.apache.openejb</groupId>
           <artifactId>tomee-embedded</artifactId>
-          <version>${tomee.version}</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.openejb</groupId>
-          <artifactId>tomee-jaxrs</artifactId>
           <version>${tomee.version}</version>
           <scope>test</scope>
         </dependency>
