try to use the shiny new jax-rs 2.0 client

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,24 @@
       <artifactId>arquillian-junit-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-client</artifactId>
+      <version>3.0.10.Final</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-jaxb-provider</artifactId>
+      <version>3.0.10.Final</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-json-p-provider</artifactId>
+      <version>3.0.10.Final</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
